--- a/clips/src/app/shared/modal/modal.component.html
+++ b/clips/src/app/shared/modal/modal.component.html
@@ -1,4 +1,5 @@
-    <div class="fixed z-50 inset-0 overflow-y-auto hidden" id="modal" #baseDialog>
+    <dialog #baseDialog>
+    <div class="fixed z-50 inset-0 overflow-y-auto " id="modal" >
         <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center 
           sm:block sm:p-0">
           <!-- Modal BG Overlay -->
@@ -18,7 +19,7 @@
               <div class="flex justify-between items-center pb-4">
                 <ng-content select="[heading]"></ng-content>
                 <!-- Modal Close Button -->
-                <div class="modal-close cursor-pointer z-50">
+                <div class="modal-close cursor-pointer z-50" (click)="closeModal($event)">
                   &#x2715;
                 </div>
               </div>
@@ -27,3 +28,4 @@
           </div>
         </div>
     </div>
+  </dialog>
