--- a/clips/src/app/shared/tab-container/tab-container.component.html
+++ b/clips/src/app/shared/tab-container/tab-container.component.html
@@ -1,18 +1,13 @@
 <!-- Tabs -->
 <ul class="flex flex-wrap mb-4">
+  @for (tab of tabs(); track $index) {
   <li class="flex-auto text-center">
     <a
       class="block rounded py-3 px-4 transition hover:text-white text-white bg-indigo-400"
       href="#"
-      >Login</a
+      >{{tab.tabTitle()}}</a
     >
   </li>
-  <li class="flex-auto text-center">
-    <a
-      class="block rounded py-3 px-4 transition hover:text-indigo-400"
-      href="#"
-      >Register</a
-    >
-  </li>
+  }
 </ul>
 <ng-content></ng-content>
