--- a/clips/src/app/user/auth-modal/auth-modal.component.html
+++ b/clips/src/app/user/auth-modal/auth-modal.component.html
@@ -1,7 +1,7 @@
 <app-modal id="auth">
   <p class="text-2xl font-bold" heading>Your Account</p>
   <app-tab-container>
-    <app-tab>
+    <app-tab tabTitle="Login">
       <!-- Login Form -->
       <form>
         <!-- Email -->
@@ -30,7 +30,7 @@
         </button>
       </form>
     </app-tab>
-    <app-tab>
+    <app-tab tabTitle="Register">
       <!-- Registration Form -->
       <form>
         <!-- Name -->
